Contact Page Bug Fix
Changelog:

Made the style of the submit button only apply to the submit button.

Changed the "Message Sent!" from content to title.

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -2,7 +2,7 @@
   --accent-color: #ff0000cc;
 }
 
-button {
+.submit-button {
   background: var(--accent-color);
   border: var(--accent-color);
   border-radius: 10px;
